--- a/about.html
+++ b/about.html
@@ -255,7 +255,7 @@
             </div>
         </div>
         <div class="col-md-8 col-md-offset-2">
-            <h1 id="关于">关于</h1><h2 id="Alias不会写Shell">Alias不会写Shell</h2><p><img src="http://tp2.sinaimg.cn/2946686205/180/5728268566/1" alt="Alias"></p>
+            <h1 id="关于">关于</h1><h2 id="Alias不会写Shell">Alias不会写Shell</h2><p><img src="http://tva3.sinaimg.cn/crop.88.0.421.421.180/afa2dcfdjw8esqqcupd4hj20e60dqq3v.jpg" alt="Alias"></p>
 <blockquote>
 <p>邮箱：yygggg@foxmail.com<br>微博：<a href="http://weibo.com/Alias21/" target="_blank" rel="external">@Alias不会写Shell</a></p>
 </blockquote>
